updated requirements.txt with versions

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,35 @@
-flask
-matplotlib
-numpy
-openai
-opencv-python
-pillow
-python-dotenv
-scipy
-werkzeug
+aiohttp==3.8.5
+aiosignal==1.3.1
+async-timeout==4.0.2
+attrs==23.1.0
+blinker==1.6.2
+certifi==2023.7.22
+charset-normalizer==3.2.0
+click==8.1.6
+contourpy==1.1.0
+cycler==0.11.0
+Flask==2.3.2
+fonttools==4.41.1
+frozenlist==1.4.0
+idna==3.4
+itsdangerous==2.1.2
+Jinja2==3.1.2
+kiwisolver==1.4.4
+MarkupSafe==2.1.3
+matplotlib==3.7.2
+multidict==6.0.4
+numpy==1.25.2
+openai==0.27.8
+opencv-python==4.8.0.74
+packaging==23.1
+Pillow==10.0.0
+pyparsing==3.0.9
+python-dateutil==2.8.2
+python-dotenv==1.0.0
+requests==2.31.0
+scipy==1.11.1
+six==1.16.0
+tqdm==4.65.0
+urllib3==2.0.4
+Werkzeug==2.3.6
+yarl==1.9.2
