Refactor API key handling and update GPT model

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,2 @@
-# Add your OpenAI API key here
+# Add your OpenAI API key here (https://platform.openai.com/account/api-keys)
 OPENAI_API_KEY=
-
-# Add a secret key for your Flask app here
-SECRET_KEY=
