--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,16 @@
 aiohttp==3.8.5
 aiosignal==1.3.1
-async-timeout==4.0.2
+async-timeout==4.0.3
 attrs==23.1.0
 blinker==1.6.2
 certifi==2023.7.22
 charset-normalizer==3.2.0
 click==8.1.6
+colorama==0.4.6
 contourpy==1.1.0
 cycler==0.11.0
 Flask==2.3.2
-fonttools==4.41.1
+fonttools==4.42.0
 frozenlist==1.4.0
 idna==3.4
 itsdangerous==2.1.2
@@ -20,16 +21,16 @@ matplotlib==3.7.2
 multidict==6.0.4
 numpy==1.25.2
 openai==0.27.8
-opencv-python==4.8.0.74
+opencv-python==4.8.0.76
 packaging==23.1
 Pillow==10.0.0
-pyparsing==3.0.9
+pyparsing==3.1.1
 python-dateutil==2.8.2
 python-dotenv==1.0.0
 requests==2.31.0
 scipy==1.11.1
 six==1.16.0
-tqdm==4.65.0
+tqdm==4.66.1
 urllib3==2.0.4
-Werkzeug==2.3.6
+Werkzeug==2.3.7
 yarl==1.9.2
