--- a/requirements.txt
+++ b/requirements.txt
@@ -22,7 +22,7 @@ matplotlib==3.7.2
 multidict==6.0.4
 numpy==1.25.2
 openai==0.27.8
-opencv-python==4.8.0.76
+opencv-python-headless
 packaging==23.1
 Pillow==10.0.0
 pyparsing==3.0.9
